# SPL2023b-Project

./: .gitignore  CMakeLists.txt  entry_file.txt  extern_file.txt  makefile  notes.md  readme.md  table_tests.c  test.as  test.c  test.txt  tester.c  tester.txt
pre-processor/: pre-processor.c  pre_processor.c  pre_processor.h
second-pass/: second_pass.c
src/: CMakeLists.txt  assembler.c  create_file_func.c  helper_function.c  utils.c
src/Second - Pass/: SecondPass.c
src/error-handling/: errors.c  errors.h
src/first-pass/: Test.c  data_arr.c  david_first_pass.c  first_pass.c  func_test.c  instruction.c  instruction_helper.c  symbol_table.c
src/first-pass/first-pass-headers/: data_arr.h  encode.h  first_pass.h  first_pass_headers.h  instruction.h  instruction_helper.h  symbol_table.h
src/first-pass/support functions/: functions.c  handle_data_directive.c  instruction_encoding_functions.c  line_foramting_functions.c
src/first-pass/support-functions/: encode.c  functions.c  handle_data_directive.c  instruction.c  line_foramting_functions.c  line_formmating_functions.c
src/globals/: create_file_func.c  globals.c  globals.h
src/include/: first_pass.h  line.h  pre_processor.h  support_functions.h  tables.h  utils.h
src/pre-processor/: TO DO LIST  handle_error.c  handle_error.h  line.c  main.c  pre_processor.c  support-functions  support_functions.c
src/pre-processor/pre-processor header files/: helper_fucntions.h  pre_processor.h  support_functions.h
src/pre-processor/pre-processor-headers/: support_functions.h
src/second-pass/: data-and-instructions.h  second_pass.c  second_pass.h  symbolNameAndIndex.h  symbolNameAndIndex.h.gch  symbol_list.h  symbol_list.h.gch
src/tables/: tables.c
tables/: tables.c  tables.h
tests/: test.am  test.as  test.ob  valid1.as  valid2.as
